1.2.39 - 'NOT NULL' changed to 'NULL' when creating database table fields to prevent table creation error for some users - Missing search button image bug fixed - 'Insufficient permissions' issue fixed that's occuring for some users when viewing past the first page of locations on 'Manage Locations' page - Styling of hover color, background color, other styling of individual search results div moved to 'store-locator.css' for easier customization - Styling updates of address search form elements above the map being mis-aligned by some themes - ReadMe in admin section styling update for better readibility - Minor admin dashboard rss widget improvements (bugfix/styling)
git-svn-id: https://plugins.svn.wordpress.org/store-locator/trunk@195256 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/store-locator.css
+++ b/store-locator.css
@@ -6,6 +6,10 @@ border: none;
 	vertical-align:top;
 	text-align:left;
 }
+.sl_header td, .sl_header th, .sl_header tr {
+	padding:4px;
+}
+
 
 /***** Search Form Inputs  *****/
 /*#search_label {
@@ -13,10 +17,12 @@ border: none;
 }*/
 #addressInput {
 	border:solid 1px silver;
-	padding-left:3px; padding-top:3px;
+	padding-left:3px; /*padding-top:3px;*/
 	background:white url(images/search-input.gif) repeat-x;
-	width:100%; height:18px;
+	width:100%; /*height:18px;*/
 	/*font-weight:bold;*/
+	margin:0px;
+	padding-top:0px;
 }
 #addressInput2_container {
 	vertical-align:top;
@@ -144,6 +150,17 @@ border: none;
 	height:250px;
 	font-size: 11px;
 	/*color: #000;*/
+}
+.results_entry {
+	cursor:pointer;
+	cursor:hand;
+	padding:4px;
+	border-bottom:solid silver 1px;
+	background-color:transparent;
+}
+.results_entry:hover {
+	/*hover color of search result*/
+	background-color:salmon;
 }
 .results_row_left_column {
 	width:30%;
